add: auslaenderanteil and einkommen query and frontend integration
