# backend/src/app/src/openapi_server/apis/wahlkreis_api.py
@@ -28,6 +28,8 @@ from typing import List, Optional
 from openapi_server.models.overview_wahlkreis import OverviewWahlkreis
 from openapi_server.models.stimmanteil import Stimmanteil
 from openapi_server.models.winning_parties import WinningParties
+from openapi_server.models.auslaenderanteil import Auslaenderanteil
+from openapi_server.models.einkommen import Einkommen
 
 
 router = APIRouter()
@@ -48,11 +50,10 @@ for _, name, _ in pkgutil.iter_modules(ns_pkg.__path__, ns_pkg.__name__ + "."):
 async def get_overview_wahlkreis(
     wahlid: StrictInt = Path(..., description=""),
     wahlkreisid: StrictInt = Path(..., description=""),
-    generatefromaggregate: Optional[StrictBool] = Query(True, description="", alias="generatefromaggregate"),
+    generatefromaggregate: Optional[str] = Query("true", alias="generatefromaggregate"),
 ) -> OverviewWahlkreis:
-    if not BaseWahlkreisApi.subclasses:
-        raise HTTPException(status_code=500, detail="Not implemented")
-    return await BaseWahlkreisApi.subclasses[0]().get_overview_wahlkreis(wahlid, wahlkreisid, generatefromaggregate)
+    generatefromaggregate_bool = generatefromaggregate.lower() == "true"
+    return await BaseWahlkreisApi.get_overview_wahlkreis(wahlid, wahlkreisid, generatefromaggregate_bool, self=None)
 
 
 @router.get(
@@ -98,3 +99,32 @@ async def get_winning_parties_wahlkreis(
     wahlid: StrictInt = Path(..., description=""),
 ) -> WinningParties:
     return await BaseWahlkreisApi.get_winning_parties(wahlid, self=None)
+
+@router.get(
+    "/results/{wahlid}/auslaenderanteil/{parteiid}/",
+    responses={
+        200: {"model": Auslaenderanteil, "description": "Returning the auslaenderanteil and zweitstimmen per selected party for all wahlkreise"},
+    },
+    tags=["Wahlkreis"],
+    response_model_by_alias=True,
+)
+async def get_foreigners(
+    wahlid: StrictInt = Path(..., description=""),
+    parteiid: StrictInt = Path(..., description=""),
+) -> Auslaenderanteil:
+    return await BaseWahlkreisApi.get_foreigners(wahlid, parteiid, self=None)
+
+
+@router.get(
+    "/results/{wahlid}/income/{parteiid}/",
+    responses={
+        200: {"model": Einkommen, "description": "Returning the income and zweitstimmen per selected party for all wahlkreise"},
+    },
+    tags=["Wahlkreis"],
+    response_model_by_alias=True,
+)
+async def get_income(
+    wahlid: StrictInt = Path(..., description=""),
+    parteiid: StrictInt = Path(..., description=""),
+) -> Einkommen:
+    return await BaseWahlkreisApi.get_income(wahlid, parteiid, self=None)
