# backend/src/app/src/openapi_server/models/einkommen.py
@@ -5,7 +5,7 @@
 
     No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
 
-    The version of the OpenAPI document: 0.1.0
+    The version of the OpenAPI document: 0.1.1
     Generated by OpenAPI Generator (https://openapi-generator.tech)
 
     Do not edit the class manually.
@@ -20,21 +20,20 @@ import json
 
 
 
-from pydantic import BaseModel, ConfigDict, StrictInt, StrictStr
-from typing import Any, ClassVar, Dict, List, Optional
+from pydantic import BaseModel, ConfigDict
+from typing import Any, ClassVar, Dict, List
+from openapi_server.models.einkommen_wahlkreise_inner import EinkommenWahlkreiseInner
 try:
     from typing import Self
 except ImportError:
     from typing_extensions import Self
 
-class Partei(BaseModel):
+class Einkommen(BaseModel):
     """
-    Partei
+    Einkommen
     """ # noqa: E501
-    id: StrictInt
-    shortName: StrictStr
-    name: Optional[StrictStr] = None
-    __properties: ClassVar[List[str]] = ["id", "shortname", "name"]
+    wahlkreise: List[EinkommenWahlkreiseInner]
+    __properties: ClassVar[List[str]] = ["wahlkreise"]
 
     model_config = {
         "populate_by_name": True,
@@ -54,7 +53,7 @@ class Partei(BaseModel):
 
     @classmethod
     def from_json(cls, json_str: str) -> Self:
-        """Create an instance of Partei from a JSON string"""
+        """Create an instance of Einkommen from a JSON string"""
         return cls.from_dict(json.loads(json_str))
 
     def to_dict(self) -> Dict[str, Any]:
@@ -73,11 +72,18 @@ class Partei(BaseModel):
             },
             exclude_none=True,
         )
+        # override the default output from pydantic by calling `to_dict()` of each item in wahlkreise (list)
+        _items = []
+        if self.wahlkreise:
+            for _item in self.wahlkreise:
+                if _item:
+                    _items.append(_item.to_dict())
+            _dict['wahlkreise'] = _items
         return _dict
 
     @classmethod
     def from_dict(cls, obj: Dict) -> Self:
-        """Create an instance of Partei from a dict"""
+        """Create an instance of Einkommen from a dict"""
         if obj is None:
             return None
 
@@ -85,9 +91,7 @@ class Partei(BaseModel):
             return cls.model_validate(obj)
 
         _obj = cls.model_validate({
-            "id": obj.get("id"),
-            "shortName": obj.get("shortName"),
-            "name": obj.get("name")
+            "wahlkreise": [EinkommenWahlkreiseInner.from_dict(_item) for _item in obj.get("wahlkreise")] if obj.get("wahlkreise") is not None else None
         })
         return _obj
 
