# backend/src/app/src/openapi_server/models/einkommen_wahlkreise_inner.py
@@ -5,7 +5,7 @@
 
     No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
 
-    The version of the OpenAPI document: 0.1.0
+    The version of the OpenAPI document: 0.1.1
     Generated by OpenAPI Generator (https://openapi-generator.tech)
 
     Do not edit the class manually.
@@ -20,21 +20,21 @@ import json
 
 
 
-from pydantic import BaseModel, ConfigDict, StrictInt, StrictStr
-from typing import Any, ClassVar, Dict, List, Optional
+from pydantic import BaseModel, ConfigDict, StrictFloat, StrictInt
+from typing import Any, ClassVar, Dict, List, Union
 try:
     from typing import Self
 except ImportError:
     from typing_extensions import Self
 
-class Partei(BaseModel):
+class EinkommenWahlkreiseInner(BaseModel):
     """
-    Partei
+    EinkommenWahlkreiseInner
     """ # noqa: E501
-    id: StrictInt
-    shortName: StrictStr
-    name: Optional[StrictStr] = None
-    __properties: ClassVar[List[str]] = ["id", "shortname", "name"]
+    wahlkreis_id: StrictInt
+    einkommen: Union[StrictFloat, StrictInt]
+    stimmen: StrictInt
+    __properties: ClassVar[List[str]] = ["wahlkreis_id", "einkommen", "stimmen"]
 
     model_config = {
         "populate_by_name": True,
@@ -54,7 +54,7 @@ class Partei(BaseModel):
 
     @classmethod
     def from_json(cls, json_str: str) -> Self:
-        """Create an instance of Partei from a JSON string"""
+        """Create an instance of EinkommenWahlkreiseInner from a JSON string"""
         return cls.from_dict(json.loads(json_str))
 
     def to_dict(self) -> Dict[str, Any]:
@@ -77,7 +77,7 @@ class Partei(BaseModel):
 
     @classmethod
     def from_dict(cls, obj: Dict) -> Self:
-        """Create an instance of Partei from a dict"""
+        """Create an instance of EinkommenWahlkreiseInner from a dict"""
         if obj is None:
             return None
 
@@ -85,9 +85,9 @@ class Partei(BaseModel):
             return cls.model_validate(obj)
 
         _obj = cls.model_validate({
-            "id": obj.get("id"),
-            "shortName": obj.get("shortName"),
-            "name": obj.get("name")
+            "wahlkreis_id": obj.get("wahlkreis_id"),
+            "einkommen": obj.get("einkommen"),
+            "stimmen": obj.get("stimmen")
         })
         return _obj
 
